bug-fixed: cds-panel-widget, cds-panel-action-detail and cds-panel-button-configuration was not overlapped but side by side each other

--- a/src/app/chatbot-design-studio/cds-dashboard/cds-dashboard.component.scss
+++ b/src/app/chatbot-design-studio/cds-dashboard/cds-dashboard.component.scss
@@ -11,11 +11,21 @@ $box-left-width: 250px;
 
 
 .cds-generic-panel{
-  position: relative;
+  position: absolute;
   right: 0;
   top: 0;
   width: auto;
   height: 100%;
+
+  &#action-detail{
+    z-index: 10
+  }
+  &#button-configuration{
+    z-index: 11
+  }
+  &#widget-preview{
+    z-index: 12
+  }
 }
 
 
